--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/workspace.xml
+.idea/workspace.xml
